raid css updated

--- a/Final Project/raidguide.html
+++ b/Final Project/raidguide.html
@@ -339,61 +339,61 @@
                     <p>
                     This section is build from community knowledge. It would be updated as we learn more of the game. These are our recommened build for Each Tera Type Raid Battle
                     </p><br />
-                    <div class="raid-item">
+                    <div class="raid-item1">
                         <div id="filter-main-container">
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('normal')"><img src="images/normal.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('normal')"><img src="images/normal.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('fire')"><img src="images/fire.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('fire')"><img src="images/fire.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('water')"><img src="images/water.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('water')"><img src="images/water.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('electric')"><img src="images/electric.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('electric')"><img src="images/electric.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('grass')"><img src="images/grass.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('grass')"><img src="images/grass.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('ice')"><img src="images/ice.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('ice')"><img src="images/ice.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('fighting')"><img src="images/fighting.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('fighting')"><img src="images/fighting.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('poison')"><img src="images/poison.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('poison')"><img src="images/poison.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('ground')"><img src="images/ground.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('ground')"><img src="images/ground.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('flying')"><img src="images/flying.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('flying')"><img src="images/flying.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('psychic')"><img src="images/psychic.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('psychic')"><img src="images/psychic.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('bug')"><img src="images/bug.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('bug')"><img src="images/bug.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('rock')"><img src="images/rock.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('rock')"><img src="images/rock.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('ghost')"><img src="images/ghost.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('ghost')"><img src="images/ghost.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('dragon')"><img src="images/dragon.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('dragon')"><img src="images/dragon.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('dark')"><img src="images/dark.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('dark')"><img src="images/dark.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('steel')"><img src="images/steel.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('steel')"><img src="images/steel.png"></btn>
                             </div>
                             <div class="filter-main-item">
-                                <button class="filter-option" onclick="filterPoke('fairy')"><img src="images/fairy.png"></button>
+                                <btn class="filter-option" onclick="filterPoke('fairy')"><img src="images/fairy.png"></btn>
                             </div>
                         </div>
                     </div>
