--- a/Final Project/currentnews.html
+++ b/Final Project/currentnews.html
@@ -64,6 +64,7 @@
                     <li><a href="raidguide.html">Raid Guide</a></li>
                     <li><a href="aboutpaldea.html">About Paldea</a></li>
                     <li><a href="aboutus.html">About Us</a></li>
+                    <li><a href="report.html">Report</a></li>
                 </ul>
             </nav>
 
