--- a/Final Project/raidguide.html
+++ b/Final Project/raidguide.html
@@ -25,7 +25,7 @@
     <!-- Link jQuery's CDN used for accessibility dropdown menu -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Inform user of current page within site structure: shown on web page's tab -->
-    <title>Paldea Times | Home</title>
+    <title>Paldea Times | Raid Guide</title>
 </head>
 
 <!-- Body section contains the structure for all visible content
@@ -64,6 +64,7 @@
                     <li><a href="raidguide.html">Raid Guide</a></li>
                     <li><a href="aboutpaldea.html">About Paldea</a></li>
                     <li><a href="aboutus.html">About Us</a></li>
+                    <li><a href="report.html">Report</a></li>
                 </ul>
             </nav>
 
