--- a/Final Project/aboutus.html
+++ b/Final Project/aboutus.html
@@ -147,32 +147,38 @@
         </section>
 
         <h2>Our Journey</h2>
-        <section class="org-timeline"></section>
+        <section class="our-journey">
+            
+        </section>
 
         <h2>Join Us</h2>
-        <section class="Discord-Guilded"></section>
+        <section class="Discord-Guilded">
+            <div class="Discord-Guilded-background">
+                <img src="images/99.fit_lim.size_1200x630.v1636051528.jpg" alt="Stanford University building." class="center">
+            </div>
+        </section>
 
         <h2>Contact Us</h2>
-            <section class="contact-us">
-                <div class="contact-form">
-                    <form>
-                        <label for="fname">First Name</label>
-                        <input type="text" id="fname" name="firstname" placeholder="Doesn't have to be your real name">
+        <section class="contact-us">
+            <div class="contact-form">
+                <form>
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname" name="firstname" placeholder="Doesn't have to be your real name">
 
-                        <label for="lname">Last Name</label>
-                        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" name="lastname" placeholder="Doesn't have to be your real last name..">
 
-                        <label for="email">E-mail Address</label>
-                        <input type="text" id="email" name="e-mail" placeholder="Enter your email">
+                    <label for="email">E-mail Address</label>
+                    <input type="text" id="email" name="e-mail" placeholder="Enter your email so we may give you a reply">
 
-                        <label for="subject">Subject</label>
-                        <textarea id="subject" name="subject" placeholder="Write something to us.."
-                            style="height:200px"></textarea>
+                    <label for="subject">Subject</label>
+                    <textarea id="subject" name="subject" placeholder="Write something to us.."
+                        style="height:200px"></textarea>
 
-                        <input type="submit" value="Submit">
-                    </form>
-                </div>
-            </section>
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+        </section>
 
 
 
