report, clean up and css left

--- a/Final Project/aboutus.html
+++ b/Final Project/aboutus.html
@@ -119,41 +119,38 @@
         <h1 id="main-page-title-center">About Us | Our Story</h1>
         <section class="about-us-top">
             <section class="about-us-top-item1">
-                <h2>Small Beginnings</h2>
-                <h3>Our Roots at Stanford University</h3>
+                <h2>An Unexpected Beginnings</h2>
+                <h3>Our Roots at Smogon</h3>
                 <!-- Discussion of the origins of Chess News, how the company was founded, and the motivation for creating the company -->
-                <p>Chess News was not once a popular and internationally renowned brand. The company has its roots as a
-                    small startup that originated at Stanford University. The president of the Stanford chess club and
-                    an avid chess player came together to create what is now known as Chess News. It was the passion,
-                    curiosity, and desire to unite chess players across the world and provide a safe and pleasant
-                    environment to access up to date and accurate news.</p>
+                <p>
+                    Our community started as a joke between 5 friends, one of us took it too seriously and started building this fan website in anticipation for Pokemon Scarlet and Violet (SV) release.
+                    The website was positively received and it is no longer a solo project. We had grown to a team of 21 with more than one thousand community members supporting us.
+                    We hope you will be part of our community.
+                </p>
             </section>
             <section class="about-us-top-item">
                 <img src="images/academy.jpg" alt="Stanford University building." class="grid-image">
             </section>
             <section class="about-us-top-item">
-                <img src="images/academy.jpg" alt="Stanford University building." class="grid-image">
+                <img src="images/pokemon-scarlet-violet-1_7new_x1x_crop1675882930695.jpg_242310155.jpg" alt="Stanford University building." class="grid-image">
             </section>
             <section class="about-us-top-item2">
-                <h2>Small Beginnings</h2>
-                <h3>Our Roots at Stanford University</h3>
+                <h2>Our Vision</h2>
+                <h3>Our long term goal</h3>
                 <!-- Discussion of the origins of Chess News, how the company was founded, and the motivation for creating the company -->
-                <p>Chess News was not once a popular and internationally renowned brand. The company has its roots as a
-                    small startup that originated at Stanford University. The president of the Stanford chess club and
-                    an avid chess player came together to create what is now known as Chess News. It was the passion,
-                    curiosity, and desire to unite chess players across the world and provide a safe and pleasant
-                    environment to access up to date and accurate news.</p>
+                <p>
+                    Our aim is to promote Pokemon Scarlet and Violet (SV) as an ideal game for competitive Pokemon battles. 
+                    We are aware that there are many competitive players who love the game but hates the grind for competition ready Pokemon.
+                    New features introduced in Pokemon Scarlet and Violet (SV) ease up the grind thus the ideal game model for competitive play.
+                    We are not paid by Nintendo to promote their game, we just loved it.
+                </p>
             </section>
-        </section>
-
-        <h2>Our Journey</h2>
-        <section class="our-journey">
-            
         </section>
 
         <h2>Join Us</h2>
         <section class="Discord-Guilded">
             <div class="Discord-Guilded-background">
+                <h3 class="center">We have active community at both Discord and Guilded. Please Join us.</h3>
                 <img src="images/99.fit_lim.size_1200x630.v1636051528.jpg" alt="Stanford University building." class="center">
             </div>
         </section>
