--- a/Final Project/aboutpaldea.html
+++ b/Final Project/aboutpaldea.html
@@ -117,7 +117,7 @@
     </header>
 
     <main>
-        <h1 id="main-page-title-center">About Paldea | The World We Bring You In</h1>
+        <h1 id="main-page-title-center">About Paldea | The World We Invite You In</h1>
         <div class="paldea-grid-container">
             <div class="paldea-item1">
                 <video class="videoInsert" controls>
