done with footer and CSS
Report to go, FML

--- a/Final Project/aboutus.html
+++ b/Final Project/aboutus.html
@@ -121,7 +121,7 @@
             <section class="about-us-top-item1">
                 <h2>An Unexpected Beginnings</h2>
                 <h3>Our Roots at Smogon</h3>
-                <!-- Discussion of the origins of Chess News, how the company was founded, and the motivation for creating the company -->
+                <!-- The story about the founding -->
                 <p>
                     Our community started as a joke between 5 friends, one of us took it too seriously and started building this fan website in anticipation for Pokemon Scarlet and Violet (SV) release.
                     The website was positively received and it is no longer a solo project. We had grown to a team of 21 with more than one thousand community members supporting us.
@@ -129,15 +129,15 @@
                 </p>
             </section>
             <section class="about-us-top-item">
-                <img src="images/academy.jpg" alt="Stanford University building." class="grid-image">
+                <img src="images/academy.jpg" alt="Pokemon Academy in Mesozoga">
             </section>
             <section class="about-us-top-item">
-                <img src="images/pokemon-scarlet-violet-1_7new_x1x_crop1675882930695.jpg_242310155.jpg" alt="Stanford University building." class="grid-image">
+                <img src="images/pokemon-scarlet-violet-1_7new_x1x_crop1675882930695.jpg_242310155.jpg" alt="player character riding pokemon">
             </section>
             <section class="about-us-top-item2">
                 <h2>Our Vision</h2>
                 <h3>Our long term goal</h3>
-                <!-- Discussion of the origins of Chess News, how the company was founded, and the motivation for creating the company -->
+                <!-- Our vision and aims -->
                 <p>
                     Our aim is to promote Pokemon Scarlet and Violet (SV) as an ideal game for competitive Pokemon battles. 
                     We are aware that there are many competitive players who love the game but hates the grind for competition ready Pokemon.
@@ -146,15 +146,15 @@
                 </p>
             </section>
         </section>
-
+        <!--Discord and Guilded, instant messaging social platform commonly used for gaming-->
         <h2>Join Us</h2>
         <section class="Discord-Guilded">
             <div class="Discord-Guilded-background">
                 <h3 class="center">We have active community at both Discord and Guilded. Please Join us.</h3>
-                <img src="images/99.fit_lim.size_1200x630.v1636051528.jpg" alt="Stanford University building." class="center">
+                <img src="images/99.fit_lim.size_1200x630.v1636051528.jpg" alt="Discord and Guilded" class="center">
             </div>
         </section>
-
+        <!-- Contact form-->
         <h2>Contact Us</h2>
         <section class="contact-us">
             <div class="contact-form">
@@ -180,6 +180,11 @@
 
 
     </main>
+    <!-- Footer section
+        1. Four sections: Language, menu, resources, and social media platforms
+        2. Copyright information
+    -->
+
     <footer>
         <!-- Four column sections: each with a header and four links related to the header -->
         <section class="footer-body">
@@ -213,16 +218,16 @@
             </section>
 
             <!-- Third column: Resources section
-                Provide an interface for users to interact with the chess database through an interactive board -->
+                Provide link to most commonly used resources -->
 
             <section class="footer-section">
                 <!-- Resources section header -->
                 <h3>Resources</h3>
                 <ul>
-                    <li><a href="#">Openings Explorer</a></li>
-                    <li><a href="#">Games Database</a></li>
-                    <li><a href="#">Board Editor</a></li>
-                    <li><a href="#">Analysis Board</a></li>
+                    <li><a href="https://www.smogon.com/">Smogon</a></li>
+                    <li><a href="https://bulbapedia.bulbagarden.net/">Bulbapedia</a></li>
+                    <li><a href="https://www.serebii.net/">Serebii</a></li>
+                    <li><a href="raidguide.html#recommendation">Recommended Raid Build</a></li>
                 </ul>
             </section>
 
@@ -232,17 +237,18 @@
             <section class="footer-section">
                 <!-- Social media section header -->
                 <h3>Connect with Us</h3>
-                <!-- Circular social media icons for Facebook, Twitter, LinkedIn and Instagram-->
+                <!-- Circular social media icons for Facebook, Twitter, Instagram, Discord and Guilded-->
                 <ul class="social-icons">
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-discord"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-guilded"></i></a></li>
                 </ul>
             </section>
             <!-- Copyright information -->
             <section class="copyright-statement">
-                <h4>© 2021 Chess News | All Rights Reserved</h4>
+                <h4>© 2023 Paldea Times | All Rights Reserved <br/>Pokémon and All Respective Names are Trademark & © of Nintendo 1996-2023</h4>
             </section>
         </section>
     </footer>
