--- a/Final Project/raidguide.html
+++ b/Final Project/raidguide.html
@@ -115,6 +115,7 @@
         </section>
     </header>
     <main>
+        <!--Content is mainly taken from https://game8.co/games/Pokemon-Scarlet-Violet/archives/384344 edited by yours truly-->
         <h1 id="main-page-title-center">Raid Guide</h1>
         <div class="raid-grid-container">
             <h2>Tera Raid Tips and Battle Mechanics | Pokemon Scarlet and Violet (SV)</h2>
@@ -132,7 +133,6 @@
                     </p><br />
                     <p>The higher the level, the stronger the wild Pokemon. Five-star raids will show up for those who finished the game with all three paths required. 
                         For the sixth level, players must complete the postgame events and some level five raids.</p>
-                    <!-- Image has zoom effect and alt text for accessibility -->
                     <img src="images/tera-raid-battle.webp" alt="a tera raid battle">
                         <p>In these encounters, players get the opportunity to catch stronger Pokemon and some that are not available outside of the raid. 
                             Preparing a team for the Tera Raid Battles requires planning and strategy.
@@ -245,6 +245,7 @@
                     </p><br />
                 </div>
             </div>
+            <!--Taken from https://www.reddit.com/r/PokemonScarletViolet/comments/znhnpz/you_can_just_press_a_your_way_through_9_out_of_18/ edited by yours truly-->
             <div class="raid-item">
                 <div class="image-main-container">
                     <h3  id="build">Building Your Roster</h3>
@@ -334,6 +335,9 @@
                     </p>
                 </div>
             </div>
+            <!--Taken from gamewith https://gamewith.net/pokemon-scarletviolet/article/show/37197 
+                Making the bottons was easy. Plugging the content was tedious.
+            -->
             <div class="raid-item">
                 <div class="image-main-container">
                     <h3  id="recommendation">Recommended Builds</h3>
@@ -343,6 +347,7 @@
                     <div class="raid-item1">
                         <div id="filter-main-container">
                             <div class="filter-main-item">
+                                <!--Run javascript function on botton click-->
                                 <btn class="filter-option" onclick="filterPoke('normal')"><img src="images/normal.png"></btn>
                             </div>
                             <div class="filter-main-item">
@@ -398,6 +403,7 @@
                             </div>
                         </div>
                     </div>
+                    <!---List of objects filtered with the button-->
                     <div class="list">
                         <div class="Poke fire fighting ground rock dragon dark">
                             <div class="image-poke-container">
@@ -724,6 +730,11 @@
         </div>
     </main>
 
+    <!-- Footer section
+        1. Four sections: Language, menu, resources, and social media platforms
+        2. Copyright information
+    -->
+
     <footer>
         <!-- Four column sections: each with a header and four links related to the header -->
         <section class="footer-body">
@@ -757,16 +768,16 @@
             </section>
 
             <!-- Third column: Resources section
-                Provide an interface for users to interact with the chess database through an interactive board -->
+                Provide link to most commonly used resources -->
 
             <section class="footer-section">
                 <!-- Resources section header -->
                 <h3>Resources</h3>
                 <ul>
-                    <li><a href="#">Openings Explorer</a></li>
-                    <li><a href="#">Games Database</a></li>
-                    <li><a href="#">Board Editor</a></li>
-                    <li><a href="#">Analysis Board</a></li>
+                    <li><a href="https://www.smogon.com/">Smogon</a></li>
+                    <li><a href="https://bulbapedia.bulbagarden.net/">Bulbapedia</a></li>
+                    <li><a href="https://www.serebii.net/">Serebii</a></li>
+                    <li><a href="raidguide.html#recommendation">Recommended Raid Build</a></li>
                 </ul>
             </section>
 
@@ -776,17 +787,18 @@
             <section class="footer-section">
                 <!-- Social media section header -->
                 <h3>Connect with Us</h3>
-                <!-- Circular social media icons for Facebook, Twitter, LinkedIn and Instagram-->
+                <!-- Circular social media icons for Facebook, Twitter, Instagram, Discord and Guilded-->
                 <ul class="social-icons">
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-discord"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-guilded"></i></a></li>
                 </ul>
             </section>
             <!-- Copyright information -->
             <section class="copyright-statement">
-                <h4>© 2021 Chess News | All Rights Reserved</h4>
+                <h4>© 2023 Paldea Times | All Rights Reserved <br/>Pokémon and All Respective Names are Trademark & © of Nintendo 1996-2023</h4>
             </section>
         </section>
     </footer>
