--- a/Final Project/aboutpaldea.html
+++ b/Final Project/aboutpaldea.html
@@ -217,6 +217,11 @@
         </div>
     </main>
 
+    <!-- Footer section
+        1. Four sections: Language, menu, resources, and social media platforms
+        2. Copyright information
+    -->
+
     <footer>
         <!-- Four column sections: each with a header and four links related to the header -->
         <section class="footer-body">
@@ -250,16 +255,16 @@
             </section>
 
             <!-- Third column: Resources section
-                Provide an interface for users to interact with the chess database through an interactive board -->
+                Provide link to most commonly used resources -->
 
             <section class="footer-section">
                 <!-- Resources section header -->
                 <h3>Resources</h3>
                 <ul>
-                    <li><a href="#">Openings Explorer</a></li>
-                    <li><a href="#">Games Database</a></li>
-                    <li><a href="#">Board Editor</a></li>
-                    <li><a href="#">Analysis Board</a></li>
+                    <li><a href="https://www.smogon.com/">Smogon</a></li>
+                    <li><a href="https://bulbapedia.bulbagarden.net/">Bulbapedia</a></li>
+                    <li><a href="https://www.serebii.net/">Serebii</a></li>
+                    <li><a href="raidguide.html#recommendation">Recommended Raid Build</a></li>
                 </ul>
             </section>
 
@@ -269,17 +274,18 @@
             <section class="footer-section">
                 <!-- Social media section header -->
                 <h3>Connect with Us</h3>
-                <!-- Circular social media icons for Facebook, Twitter, LinkedIn and Instagram-->
+                <!-- Circular social media icons for Facebook, Twitter, Instagram, Discord and Guilded-->
                 <ul class="social-icons">
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-discord"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-guilded"></i></a></li>
                 </ul>
             </section>
             <!-- Copyright information -->
             <section class="copyright-statement">
-                <h4>© 2021 Chess News | All Rights Reserved</h4>
+                <h4>© 2023 Paldea Times | All Rights Reserved <br/>Pokémon and All Respective Names are Trademark & © of Nintendo 1996-2023</h4>
             </section>
         </section>
     </footer>
