--- a/Final Project/currentnews.html
+++ b/Final Project/currentnews.html
@@ -126,6 +126,7 @@
             <h1 id="main-page-title">Current News | Daily</h1>
             <div class="current-grid-container">
                 <div class="current-item1">
+                    <!--Taken from official pokemon website-->
                     <div class="current-item3">
                         <!-- Indicate the date the web page was published on and the last time the web page was updated -->
                         <h5>Date Published: February 13, 2023 · Last Updated: February 19, 2023</h5>
@@ -213,6 +214,7 @@
                                     </p>
                         </div>
                     </div>
+                    <!--Taken from Kotaku-->
                     <div class="current-item4">
                         <div class="image-main-container">
                             <!-- Image has zoom effect and alt text for accessibility -->
@@ -256,6 +258,7 @@
                                 </p>
                         </div>
                     </div>
+                    <!--Taken from bulbapedia-->
                     <div class="current-item4">
                         <div class="image-main-container">
                             <!-- Image has zoom effect and alt text for accessibility -->
@@ -276,6 +279,7 @@
                         </div>
                     </div>   
                 </div>
+                <!--Information card section-->
                 <div class="current-item2">
                     <h2>Breaking news</h2>
                     <div class="current-item10">
@@ -377,6 +381,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- One of the many official Twitter account operated by Pokemon Company-->
                     <div class="current-item13">
                         <a class="twitter-timeline" data-height="2000" href="https://twitter.com/playpokemon?ref_src=twsrc%5Etfw">Tweets by playpokemon</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </div>        
@@ -386,7 +391,6 @@
         </article>
 
     </main>
-
 
     <!-- Footer section
         1. Four sections: Language, menu, resources, and social media platforms
@@ -426,16 +430,16 @@
             </section>
 
             <!-- Third column: Resources section
-                Provide an interface for users to interact with the chess database through an interactive board -->
+                Provide link to most commonly used resources -->
 
             <section class="footer-section">
                 <!-- Resources section header -->
                 <h3>Resources</h3>
                 <ul>
-                    <li><a href="#">Openings Explorer</a></li>
-                    <li><a href="#">Games Database</a></li>
-                    <li><a href="#">Board Editor</a></li>
-                    <li><a href="#">Analysis Board</a></li>
+                    <li><a href="https://www.smogon.com/">Smogon</a></li>
+                    <li><a href="https://bulbapedia.bulbagarden.net/">Bulbapedia</a></li>
+                    <li><a href="https://www.serebii.net/">Serebii</a></li>
+                    <li><a href="raidguide.html#recommendation">Recommended Raid Build</a></li>
                 </ul>
             </section>
 
@@ -445,17 +449,18 @@
             <section class="footer-section">
                 <!-- Social media section header -->
                 <h3>Connect with Us</h3>
-                <!-- Circular social media icons for Facebook, Twitter, LinkedIn and Instagram-->
+                <!-- Circular social media icons for Facebook, Twitter, Instagram, Discord and Guilded-->
                 <ul class="social-icons">
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-discord"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-guilded"></i></a></li>
                 </ul>
             </section>
             <!-- Copyright information -->
             <section class="copyright-statement">
-                <h4>© 2021 Chess News | All Rights Reserved</h4>
+                <h4>© 2023 Paldea Times | All Rights Reserved <br/>Pokémon and All Respective Names are Trademark & © of Nintendo 1996-2023</h4>
             </section>
         </section>
     </footer>
